--- a/hugo/themes/scrapyard/assets/css/global-styles.css
+++ b/hugo/themes/scrapyard/assets/css/global-styles.css
@@ -3,7 +3,7 @@ body {
   color: var(--color-dark);
   line-height: 1.6;
   font-size: var(--size-base);
-  font-family: var(--font-base);
+  font-family: var(--font-base), sans-serif;
   font-weight: 400;
   display: flex;
   flex-direction: column;
